--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
       <h1>Happy Birthday!</h1>
       <img src="https://i.imgur.com/HLR6fTb.jpg" title="source: imgur.com" />
-      <h1>Love, Meat Sweats</h1>
+      <h1>Love, The Meat Sweats</h1>
     </div>
   </body>
 </html>
